Realicé la primera tarea de la clase: crear una función que validé el formato de una fecha dada

--- a/tareas/tarea01/index.html
+++ b/tareas/tarea01/index.html
@@ -6,6 +6,6 @@
     <title>Tarea 01</title>
   </head>
   <body>
-    <script src="tarea01.js"></script>
+    <script src="js/tarea01.js"></script>
   </body>
 </html>
